--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceuil</title>
+    <title>Calculator - A simple operation calculator</title>
 </head>
 <body>
-    <header class="menu">
-
-    </header>
-    <div>
-
-    </div>
-    <footer>
-
-    </footer>
+    
 </body>
 </html>
