--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header class="menu">
+        <a href="./"">Inscription</a>
         <a href=""></a>
     </header>
     <div>
