--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.menu.css">
     <title>Acceuil</title>
 </head>
 <body>
     <header class="menu">
-        <a href="./"">Inscription</a>
-        <a href=""></a>
+        <a href="./pages/inscription.html">Inscription</a>
+        <a href="./pages/calculator.html">Calculator</a>
+        <a href="./pages/imageroll.html">Image roll</a>
+        <a href="./pages/buttonchaser.html">Button chaser</a>
     </header>
     <div>
         <h1>
