--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.menu.css">
+    <link rel="stylesheet" href="./styles/style.menu.css">
     <title>Acceuil</title>
 </head>
 <body>
@@ -18,9 +18,18 @@
         <h1>
             HELLO WORLD
         </h1>
+        <p>
+            Welcome on my website this is a mock up site to practice on HTML, CSS and JAVASCRIPT, used together.
+        </p>
+        <p>
+            You can navigate on this site and test the différents exercices
+        </p>
     </div>
     <footer>
-
+        &#169;Feuzme 2021
+        <div>
+            <a href="./index.html">acceuil</a>
+        </div>
     </footer>
 </body>
 </html>
