--- a/pages/inscription.html
+++ b/pages/inscription.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - A mock up register page</title>
+    <link rel="stylesheet" href="../styles/style.menu.css">
 </head>
 <body>
-    
+    <header class="menu">
+        <a href="../pages/inscription.html">Inscription</a>
+        <a href="../pages/calculator.html">Calculator</a>
+        <a href="../pages/imageroll.html">Image roll</a>
+        <a href="../pages/buttonchaser.html">Button chaser</a>
+    </header>
+    <div>
+        <form onclick="inscription(this)" method="get">
+            <label>
+                Nom : 
+                <input type="text" name="nom" id="nom">
+            </label>
+            <label>
+                Prenom : 
+                <input type="text" name="prenom" id="prenom">
+            </label>
+            <label>
+                Age : 
+                <input type="number" name="age" id="age">
+            </label>
+        </form>
+    </div>
+    <footer>
+        &#169;Feuzme 2021
+        <div>
+            <a href="./index.html">acceuil</a>
+        </div>
+    </footer>
+    <script src="../scripts/inscription.js"></script>
 </body>
 </html>
