inscription feature in progress

--- a/pages/inscription.html
+++ b/pages/inscription.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - A mock up register page</title>
     <link rel="stylesheet" href="../styles/style.menu.css">
+    <link rel="stylesheet" href="../styles/style.inscription.css">
 </head>
 <body>
     <header class="menu">
@@ -15,7 +16,7 @@
         <a href="../pages/buttonchaser.html">Button chaser</a>
     </header>
     <div>
-        <form onclick="inscription(this)" method="get">
+        <form onclick="inscription(this)" method="get" class="inscription">
             <label>
                 Nom : 
                 <input type="text" name="nom" id="nom">
@@ -30,6 +31,7 @@
             </label>
         </form>
     </div>
+    <hr>
     <footer>
         &#169;Feuzme 2021
         <div>
