--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <footer>
         &#169;Feuzme 2021
         <div>
-            <a href="./index.html">acceuil</a>
+            <a href="./index.html">Back to main Page</a>
         </div>
     </footer>
 </body>
