--- a/pages/inscription.html
+++ b/pages/inscription.html
@@ -49,7 +49,7 @@
     <footer>
         &#169;Feuzme 2021
         <div>
-            <a href="./index.html">acceuil</a>
+            <a href="../index.html">Back to main Page</a>
         </div>
     </footer>
     <script src="../scripts/inscription.js"></script>
