--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -7,6 +7,21 @@
     <title>Calculator - A simple operation calculator</title>
 </head>
 <body>
-    
+    <header class="menu">
+        <a href="../pages/inscription.html">Inscription</a>
+        <a href="../pages/calculator.html">Calculator</a>
+        <a href="../pages/imageroll.html">Image roll</a>
+        <a href="../pages/buttonchaser.html">Button chaser</a>
+    </header>
+    <div class="calcWrapper">
+        
+    </div>
+    <hr>
+    <footer>
+        &#169;Feuzme 2021
+        <div>
+            <a href="../index.html">Back to main Page</a>
+        </div>
+    </footer>
 </body>
 </html>
