--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -16,30 +16,39 @@
         <a href="../pages/buttonchaser.html">Button chaser</a>
     </header>
     <div class="calcWrapper">
-        <div class="line1">
-            <input type="button" value="7" id="btn7">
-            <input type="button" value="8" id="btn8">
-            <input type="button" value="9" id="btn9">
-            <input type="button" value="+" id="btnAdd">
-        </div>
-        <div class="line2">
-            <input type="button" value="4" id="btn4">
-            <input type="button" value="5" id="btn5">
-            <input type="button" value="6" id="btn6">
-            <input type="button" value="-" id="btnMinus">
-        </div>
-        <div class="line3">
-            <input type="button" value="1" id="btn1">
-            <input type="button" value="2" id="btn2">
-            <input type="button" value="3" id="btn3">
-            <input type="button" value="x" id="btnMult">
-        </div>
-        <div class="line4">            
-            <input type="button" value="." id="btnDot">
-            <input type="button" value="0" id="btn0">   
-            <input type="button" value="0" style="visibility: hidden;">  
-            <input type="button" value="/" id="btnDiv">
-        </div>
+        <form onclick="calculator()">
+            <div class="line">
+                <input type="button" value="7" id="btn7">
+                <input type="button" value="8" id="btn8">
+                <input type="button" value="9" id="btn9">
+                <input type="button" value="+" id="btnAdd">
+            </div>
+            <div class="line">
+                <input type="button" value="4" id="btn4">
+                <input type="button" value="5" id="btn5">
+                <input type="button" value="6" id="btn6">
+                <input type="button" value="-" id="btnMinus">
+            </div>
+            <div class="line">
+                <input type="button" value="1" id="btn1">
+                <input type="button" value="2" id="btn2">
+                <input type="button" value="3" id="btn3">
+                <input type="button" value="x" id="btnMult">
+            </div>
+            <div class="line">            
+                <input type="button" value="." id="btnDot">
+                <input type="button" value="0" id="btn0">   
+                <input type="button" value="0" style="visibility: hidden;">  
+                <input type="button" value="/" id="btnDiv">
+            </div>
+            <div class="line">
+                <p id="numbre1">num1</p>
+                <p id="operation">+-/*</p>
+                <p id="number2">num2</p>
+                <p> = </p>
+                <p id="result">result</p>
+            </div>
+        </form>   
     </div>
     <hr>
     <footer>
