--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -40,9 +40,15 @@
             <input type="button" value="C" id=btnClear onclick="display('clear')">  
             <input type="button" value="/" id="btnDiv" onclick="display('/')">
         </div>
-        <div class="line">   
-            <input type="button" value="=" onclick="solve()">      
-            <p id="result">result</p>
+        <div class="line">
+            <input type="button" value="=" onclick="solve()"> 
+        </div>
+        <div class="line"> 
+            <p id='num1'></p> 
+            <p id="op"></p>   
+            <p id="num2"></p> 
+            <p> = </p>            
+            <p id="result"></p>
         </div>   
     </div>
     <hr>
